dataset1235/2025-2/805158916/users/4104794000/executions/2651470117_2383239197.log
== SUBMISSION (2025-08-25 15:53:01)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira árvore?" ))
b = float(input("Qual a distância á segunda árvore?" ))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus?" )))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:53:02)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira árvore?" ))
b = float(input("Qual a distância á segunda árvore?" ))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus?" )))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:52:01)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira ávore? "))
b = float(input("Qual a distância á segunda ávore? "))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus? ")))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:52:19)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira árvore? "))
b = float(input("Qual a distância á segunda árvore? "))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus? ")))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:53:45)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira árvore?" ))
b = float(input("Qual a distância á segunda árvore?" ))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus?" )))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(C,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Qual a distância á primeira árvore?Qual a distância á segunda árvore?Quando mede o ângulo entre as distâncias em graus?9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:51:27)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("qual a distância á primeira ávore? "))
b = float(input("qual a distância á segunda ávore? "))
y = radians(float(input("quanto mede o ângulo entre as distâncias em graus? ")))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:52:02)
-- CODE: 
from math import cos 
from math import sqrt 
from math import radians
a = float(input("Qual a distância á primeira ávore? "))
b = float(input("Qual a distância á segunda ávore? "))
y = radians(float(input("Quando mede o ângulo entre as distâncias em graus? ")))
C = sqrt(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(c,2))
                ^
NameError: name 'c' is not defined. Did you mean: 'C'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
